--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ markdown:    redcarpet
 permalink: 	 pretty
 paginate: 3
 baseurl: /man-over-board
+title: Man Over Board
+url: www.crista-alejandre.com
+description: Man Over Board blog
